@@ -1,3 +1,10 @@
+2004-01-25  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/parse_filename.h:
+	* libpp/parse_filename.cpp: profile_spec_equal() new predicate
+	* libpp/arrange_profiles.cpp: use it to ensure we cerate a new
+	  profile_samples_file when needed.
+
 2004-01-24  John Levon  <levon@movementarian.org>
 
 	* doc/oprofile.1.in:
